[gd_scene load_steps=20 format=2]

[ext_resource path="res://fonts/Shadows_Into_Light/ShadowsIntoLight.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/gui/button_groups/options_buttons.tres" type="ButtonGroup" id=2]
[ext_resource path="res://scripts/gui/puzzle_displayer.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 35
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="InputEventAction" id=3]
action = "ui_1"

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[sub_resource type="InputEventAction" id=5]
action = "ui_2"

[sub_resource type="ShortCut" id=6]
shortcut = SubResource( 5 )

[sub_resource type="InputEventAction" id=7]
action = "ui_3"

[sub_resource type="ShortCut" id=8]
shortcut = SubResource( 7 )

[sub_resource type="InputEventAction" id=9]
action = "ui_4"

[sub_resource type="ShortCut" id=10]
shortcut = SubResource( 9 )

[sub_resource type="InputEventAction" id=11]
action = "ui_5"

[sub_resource type="ShortCut" id=12]
shortcut = SubResource( 11 )

[sub_resource type="InputEventAction" id=13]
action = "ui_6"

[sub_resource type="ShortCut" id=14]
shortcut = SubResource( 13 )

[sub_resource type="InputEventAction" id=15]
action = "ui_accept"

[sub_resource type="ShortCut" id=16]
shortcut = SubResource( 15 )

[node name="puzzle_displayer" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -224.0
size_flags_horizontal = 2
size_flags_vertical = 2
theme = SubResource( 2 )
custom_constants/separation = 40
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="problem_label" type="Label" parent="."]
margin_right = 800.0
margin_bottom = 119.0
rect_min_size = Vector2( 200, 108 )
text = "
3+5=??"

[node name="options_container" type="GridContainer" parent="."]
margin_top = 159.0
margin_right = 800.0
margin_bottom = 307.0
custom_constants/vseparation = 20
custom_constants/hseparation = 20
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="option_button0" type="Button" parent="options_container"]
margin_right = 107.0
margin_bottom = 64.0
toggle_mode = true
shortcut_in_tooltip = false
shortcut = SubResource( 4 )
group = ExtResource( 2 )
text = "option a"

[node name="option_button1" type="Button" parent="options_container"]
margin_left = 127.0
margin_right = 234.0
margin_bottom = 64.0
toggle_mode = true
shortcut_in_tooltip = false
shortcut = SubResource( 6 )
group = ExtResource( 2 )
text = "option a"

[node name="option_button2" type="Button" parent="options_container"]
margin_left = 254.0
margin_right = 361.0
margin_bottom = 64.0
toggle_mode = true
shortcut_in_tooltip = false
shortcut = SubResource( 8 )
group = ExtResource( 2 )
text = "option a"

[node name="option_button3" type="Button" parent="options_container"]
margin_top = 84.0
margin_right = 107.0
margin_bottom = 148.0
toggle_mode = true
shortcut_in_tooltip = false
shortcut = SubResource( 10 )
group = ExtResource( 2 )
text = "option a"

[node name="option_button4" type="Button" parent="options_container"]
margin_left = 127.0
margin_top = 84.0
margin_right = 234.0
margin_bottom = 148.0
toggle_mode = true
shortcut_in_tooltip = false
shortcut = SubResource( 12 )
group = ExtResource( 2 )
text = "option a"

[node name="option_button5" type="Button" parent="options_container"]
margin_left = 254.0
margin_top = 84.0
margin_right = 361.0
margin_bottom = 148.0
toggle_mode = true
shortcut_in_tooltip = false
shortcut = SubResource( 14 )
group = ExtResource( 2 )
text = "option a"

[node name="accept_button" type="Button" parent="."]
margin_top = 347.0
margin_right = 96.0
margin_bottom = 411.0
size_flags_horizontal = 2
size_flags_vertical = 2
shortcut_in_tooltip = false
shortcut = SubResource( 16 )
text = "Accept"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="main_container" type="VBoxContainer" parent="."]
margin_top = 600.0
margin_right = 800.0
margin_bottom = 600.0
custom_constants/separation = 40
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}
